# swoop

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plot_logs.ipynb
include/: drone.h  laser_error.h  scene.h  utils.h
src/: drone.cpp  laser_error.cpp  scene.cpp
